# python_package_skeleton

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
tests/: test_example.py
